# agx

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  agx-bugfix-sidebar-full-src-prompt.md  agx-v0.3-redesign-cmux-alt-gpt54-prompt.md  agx-v0.3-sidebar-tab-gpt54-prompt.md  err.txt
.github/workflows/: ci.yml
src/: app.rs  config.rs  lib.rs  main.rs  pane.rs  surface.rs  workspace.rs
src/agent/: detector.rs  mod.rs  process.rs  registry.rs
src/config/: loader.rs
src/terminal/: input.rs  mod.rs  pty.rs
src/ui/: layout.rs  mod.rs  sidebar.rs
tests/: agent_lifecycle.rs  config.rs  layout.rs
tests/common/: mod.rs
