[package]
name = "agx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform AI agent terminal multiplexer"
repository = "https://github.com/ai4wm/agx"
keywords = ["ai", "agent", "terminal", "multiplexer", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
portable-pty = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
